integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__set_non_transferable_v2.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplBubblegumV2",
  "id": "9JZWk34GEsxNWRF6XRxL6LYDhs5W7AuUVX2VHo9UV7ds",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "6MuaFt3EfVTxp66RxXvvCuQZpsDb2eb7ZfbShxmractd",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "AKr5qYb8yhD1GW6TYopFLq1KmCfTvdKsUqgkn8sTA4hS",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "4u3Xy3St2YGUP8vYViDFhdJ27iW2chEePhyGjYpe8o8Z",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 4,
    "asset_hash": "5dvUQ8Dn2H6w4tRHQVDsU1JBNP1xMQ4r9uoZAFhR3vMt",
    "tree": "7d9T974UCCZyKBxBK4Wmqh7aBRaWG2rCj5nZ5uU6z9Qq",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "CFBZCGCs61JzV2FbMucP5uGMN7tjJ3Rt3gjGAVt8J6SR"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": true,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "6DuFGF9szWh62UcCoqYzYT6zFVwvrhTN1mzKsryVbx4q"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
