integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__update_metadata_v2_new_name_new_uri.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplBubblegumV2",
  "id": "38pabFkaBAVUBwPotd1Wync8ECDbVe8iZLxJyDgZG8jo",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://updated-example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "New name",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "5Uc5xgiNuuSSe9k9LgfHy3mvVyyum9iH8ULEAg82KWA4",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "CdYnDVqVL9MsPzMSERtZ6dPCG7ie6L5QSeNia5Nh8xmY",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "2yaBLMDY5DHNKMNkAgHwvNeEe2SmmAj8PaNEA1z8ob85",
    "tree": "9Wo9k94WBtcKRdUH9yWhwxWGG46BYNRbPxXfPGVVcnsK",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "CDfvLy21AxAPWoxQkzMiVbboMdgvGtMhsKoWsdr9XyaH"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
